# agritech

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
docker/: docker-compose.yml
docs/: MVP_PLAN.md  README.md  changelog.md  development_guidelines.md  git_branch_strategy.md  git_strategy.md  mvp_plan.md  project_planning.md
docs/api/: README.md  architecture.md  auth.md  error_handling.md
docs/api/resources/: admin.md  analytics.md  audit.md  batch.md  cache.md  crops.md  documentation.md  export.md  fields.md  health.md  import.md  integrations.md  metrics.md  notifications.md  rate_limit.md  scheduler.md  search.md  sensors.md  tasks.md  weather.md  workflow.md
docs/architecture/: component_design.md  database_schema.md  system_architecture.md
docs/glossary/: README.md  en.md  ja.md  mapping.md
docs/guidelines/: api_design.md  coding_standards.md  logging.md  naming_conventions.md  security.md  testing.md
docs/operations/: backup_recovery.md  incident_response.md  monitoring.md
docs/setup/: deployment.md  development_environment_setup.md  development_setup.md
